<resources>
    <string name="app_name">maquillage</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Panier</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="facebook_app_id">1576771305917663</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="email">E-mail</string>
    <string name="ddn">Date de naissance : </string>
    <string name="champs"><![CDATA[<font color=\"#ff2aad\">*</font> champs obligatoires]]></string>
    <string name="champs2"><![CDATA[<font color=\"#ff2aad\">**</font> vous devez fournir au moins un numéro]]></string>
    <string name="conf"><![CDATA[Conformément à la loi Informatique et Libertés du 6 janvier 1978, vous disposez d\'un droit d\'accès, de rectification et de suppression des données vous concernant. Ce droit peut être exercé en écrivant à <font color="#ff2aad">brostore@orange.fr</font>]]></string>
    <string name="mdp">Mot de passe</string>
    <string name="connect">Je me connecte</string>
    <string name="inscript">Je m\'inscris</string>
    <string name="ou">ou</string>
    <string name="compte">Compte</string>
    <string name="valider">Valider</string>
    <string name="newsletter">S\'inscrire à la newsletter</string>
    <string name="verifmail">Vérification de l\'adresse mail...</string>
    <string name="connexion">Connexion à votre compte en cours...</string>
    <string name="creation">Création de votre compte en cours...</string>
    <string name="recup_adresses">Récupération de vos adresses en cours...</string>
    <string name="recup_commandes">Récupération de vos commandes en cours...</string>
    <string name="no_addresses">Vous n\'avez aucune adresse.</string>
    <string name="no_orders">Vous n\'avez aucune commande.</string>
    <string name="societe">Société</string>
    <string name="vatnumber">TVA</string>
    <string name="address">Adresse</string>
    <string name="address2">Addresse complémentaire</string>
    <string name="cp">Code Postal</string>
    <string name="alias">Alias de votre adresse</string>
    <string name="infos">Infos supplémentaire</string>
    <string name="tel_fixe">Téléphone fixe</string>
    <string name="tel_port">Téléphone portable</string>
    <string name="city">Ville</string>

</resources>
