<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/new_addresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="Nouvelle Adresse"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/new_addresse"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/france"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox"
                    android:checked="true"
                    android:paddingLeft="5dp"
                    android:text="France" />

                <RadioButton
                    android:id="@+id/belgium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:button="@drawable/checkbox"
                    android:paddingLeft="5dp"
                    android:text="Belgique" />
            </RadioGroup>

            <EditText
                android:id="@+id/alias"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/country"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/alias"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/alias"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/prenom"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/firstName"
                android:layout_marginLeft="18dp"
                android:text="*"
                android:textColor="@color/rose_bright" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/firstName"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/nom"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/lastName"
                android:layout_marginLeft="18dp"
                android:text="*"
                android:textColor="@color/rose_bright" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/alias"
                android:layout_marginLeft="18dp"
                android:text="*"
                android:textColor="@color/rose_bright" />

            <EditText
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/lastName"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/societe"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/vat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/company"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/vatnumber"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/vat"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/address"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/address"
                android:layout_marginLeft="18dp"
                android:text="*"
                android:textColor="@color/rose_bright" />

            <EditText
                android:id="@+id/address2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/address"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/address2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/cp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/address2"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/cp"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/cp"
                android:layout_marginLeft="18dp"
                android:text="*"
                android:textColor="@color/rose_bright" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/cp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/city"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/city"
                android:layout_marginLeft="18dp"
                android:text="*"
                android:textColor="@color/rose_bright" />

            <EditText
                android:id="@+id/tel_fixe"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/city"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/tel_fixe"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tel_fixe"
                android:layout_marginLeft="12dp"
                android:text="**"
                android:textColor="@color/rose_bright" />

            <EditText
                android:id="@+id/tel_portable"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/tel_fixe"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/tel_port"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tel_portable"
                android:layout_marginLeft="12dp"
                android:text="**"
                android:textColor="@color/rose_bright" />

            <EditText
                android:id="@+id/infos"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/tel_portable"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/infos"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/champs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infos"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/champs" />

            <TextView
                android:id="@+id/champs2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/champs"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/champs2" />

            <TextView
                android:id="@+id/valider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/champs2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/valider"
                android:textColor="@color/white" />

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/valider"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/rose_bright" />

            <TextView
                android:id="@+id/conf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/separator1"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/conf"
                android:textSize="12sp" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/loadinglayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/rose"
            android:indeterminateTintMode="src_in" />

        <brostore.maquillage.custom.FontTextView
            android:id="@+id/chargement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/progress"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="Création de votre nouvelle adresse en cours..."
            android:textColor="@color/black"
            android:textSize="25sp"
            app:ttfNameTextView="ElleNovaC-Light.otf" />

    </LinearLayout>

</LinearLayout>